--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,11 @@ body {
     color: #FFFFFF;
     letter-spacing: 2px;
   }
+  .title h2 {
+    text-shadow: 0 0 10px #ff006c, 0 0 20px #ff006c, 0 0 30px #ff006c, 0 0 40px #ff417d, 0 0 70px #ff417d, 0 0 80px #ff417d, 0 0 100px #ff417d, 0 0 150px #ff417d;
+    line-height: 1;
+    color: #FFFFFF;
+  }
   
 .Typewriter{
     display: inline;
