--- a/src/index.css
+++ b/src/index.css
@@ -126,3 +126,62 @@ section{
     padding-bottom: 50px;
   }
 }
+
+/* flip box css */
+
+.flip-box {
+  background-color: transparent;
+  /* width: 300px;
+  height: 200px; */
+  /* border: 1px solid #f1f1f1; */
+  perspective: 1000px;
+}
+
+.flip-box-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip-box:hover .flip-box-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-box-front, .flip-box-back {
+  
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-box-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-box-back {
+  position: absolute;
+  top:5px;
+  background-color: #555;
+  color: white;
+  transform: rotateY(180deg);
+}
+/* 
+img {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 150px;
+}
+
+img:hover {
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+} */
+
+ /* Container holding the image and the text */
+
+/* Bottom right text */
