--- a/src/index.css
+++ b/src/index.css
@@ -26,11 +26,6 @@
 /* For STARDUST */
 
 @import url("https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600");
-/* body {
-  padding: 0;
-  margin: 0;
-} */
-
 
 body {
     margin: 0;
@@ -43,10 +38,6 @@ body {
   
 .title {
     z-index: 10;
-    /* position: absolute;
-    left: 50%;
-    top: 50%; */
-    /* transform: translateX(-50%) translateY(-50%); */
     font-family: "Montserrat";
     text-align: center;
     width: 100%;
@@ -92,11 +83,6 @@ body {
     display: inline;
 }
 
-/* @media (max-width:900px) and (min-width: 600px) {
-  .page-header .container{
-
-  }
-} */
 
 body{
   font-family: 'Open Sans', sans-serif;
@@ -115,15 +101,16 @@ section{
   padding:100px 0;
 }
 
-@media (max-width:979){
+@media (max-width:979px){
   .footer{
     padding-bottom: 60px;
   }
 }
 
-@media (max-width:600){
+@media (max-width:600px){
   .footer{
     padding-bottom: 50px;
+    margin-bottom: 50px;
   }
 }
 
@@ -131,9 +118,6 @@ section{
 
 .flip-box {
   background-color: transparent;
-  /* width: 300px;
-  height: 200px; */
-  /* border: 1px solid #f1f1f1; */
   perspective: 1000px;
 }
 
@@ -173,23 +157,12 @@ section{
 
 .flip-box-back {
   position: absolute;
-  top:5px;
+  top:1px;
   background-color: #555;
   color: white;
   transform: rotateY(180deg);
 }
-/* 
-img {
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding: 5px;
-  width: 150px;
+
+img{
+  border: 2px solid white;
 }
-
-img:hover {
-  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
-} */
-
- /* Container holding the image and the text */
-
-/* Bottom right text */
