--- a/src/index.css
+++ b/src/index.css
@@ -166,3 +166,16 @@ section{
 img{
   border: 2px solid white;
 }
+
+/* Mobile Loader */
+
+.mobile-loader{
+  /* background-image: url('assets/img/loader2.gif'); */
+  /* background-size: cover; */
+  /* background-repeat: no-repeat; */
+  height: 100vh;
+  /* padding:0;
+  margin:0; */
+  margin: auto;
+  width: 50%;
+}
