--- a/src/index.css
+++ b/src/index.css
@@ -179,3 +179,22 @@ img{
   margin: auto;
   width: 50%;
 }
+
+
+.video-responsive{
+  overflow:hidden;
+  padding-bottom:56.25%;
+  margin: 20px;
+  position:relative;
+  height:0;
+  -webkit-box-shadow: 3px 3px 5px 6px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+  -moz-box-shadow:    3px 3px 5px 6px #ccc;  /* Firefox 3.5 - 3.6 */
+  box-shadow:         3px 3px 5px 6px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
+}
+.video-responsive iframe{
+  left:0;
+  top:0;
+  height:90%;
+  width:100%;
+  position:absolute;
+}
